# earcut.hpp

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  appveyor.yml  common.gypi  configure  earcut.gyp
.github/workflows/: build.yml
include/: earcut.hpp  earcut_detail.hpp
include/mapbox/: earcut.hpp
src/: impl.cpp  main.cpp  point.hpp
test/: bench.cpp  convert_tests.js  jsonexample.cpp  tap.cpp  tap.hpp  test.cpp  viz.cpp  viz.gyp
test/comparison/: earcut.hpp  libtess2.hpp
test/fixtures/: bad_diagonals.cpp  bad_diagonals.hpp  bad_hole.cpp  bad_hole.hpp  boxy.cpp  boxy.hpp  building.cpp  building.hpp  collinear_diagonal.cpp  collinear_diagonal.hpp  degenerate.cpp  degenerate.hpp  dude.cpp  dude.hpp  earcut.cpp  eberly-6.cpp  eberly_3.cpp  eberly_3.hpp  eberly_6.cpp  eberly_6.hpp  empty_square.cpp  empty_square.hpp  filtered_bridge_jhl.cpp  fixtures.hpp  geometries.cpp  geometries.hpp  hilbert.cpp  hilbert.hpp  hole_touching_outer.cpp  hole_touching_outer.hpp  hourglass.cpp  hourglass.hpp  infinite_loop_jhl.cpp  issue107.cpp  issue107.hpp  issue111.cpp  issue111.hpp  issue119.cpp  issue119.hpp  issue131.cpp  (+68 more)
